# omq.rs

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  release-plz.toml
.github/workflows/: ci.yml
bindings/pyomq/: Cargo.toml  README.md  pyproject.toml
bindings/pyomq/python/pyomq/: __init__.py  asyncio.py  error.py
bindings/pyomq/src/: constants.rs  context.rs  conversions.rs  dispatch.rs  error.rs  lib.rs  options.rs  runtime.rs  socket.rs  socket_async.rs
bindings/pyomq/tests/: conftest.py  test_async.py  test_async_interop.py  test_basic.py  test_interop.py  test_options.py  test_perf.py  test_pubsub.py  test_reqrep.py  test_socket_types.py
omq/: CHANGELOG.md  Cargo.toml
omq-compio/: CHANGELOG.md  Cargo.toml
omq-compio/benches/: compression.rs  multithread_push_pull.rs  pair.rs  pub_sub.rs  push_pull.rs  req_rep.rs  router_dealer.rs
omq-compio/benches/common/: mod.rs
omq-compio/examples/: profile_tcp.rs
omq-compio/src/: lib.rs  monitor.rs
omq-compio/src/socket/: dial.rs  handle.rs  inner.rs  install.rs  mod.rs  send.rs
omq-compio/src/transport/: driver.rs  inproc.rs  ipc.rs  mod.rs  peer_io.rs  tcp.rs  udp.rs
omq-compio/tests/: blake3zmq.rs  conflate.rs  coverage_matrix.rs  curve.rs  draft_types.rs  fuzz_parsers.rs  fuzz_socket_actions.rs  handshake_timeout.rs  heartbeat.rs  inproc_subside.rs  interop_pyzmq_curve.rs  interop_ruby.rs  ipc_basic.rs  lz4_tcp.rs  monitor.rs  multi_peer.rs  options_polish.rs  priority.rs  pub_sub.rs  push_pull.rs  radio_dish.rs  reconnect.rs  recv_direct.rs  req_rep.rs  router_dealer.rs  tcp_basic.rs  udp.rs  unbind_disconnect.rs  xpub_xsub.rs  zstd_tcp.rs
omq-proto/: CHANGELOG.md  Cargo.toml
omq-proto/benches/: mechanism_frame.rs
omq-proto/src/: backoff.rs  connect_opts.rs  endpoint.rs  error.rs  lib.rs  message.rs  monitor.rs  options.rs  subscription.rs  type_state.rs
omq-proto/src/proto/: command.rs  connection.rs  frame.rs  greeting.rs  mod.rs  z85.rs
omq-proto/src/proto/mechanism/: curve.rs  curve_keys.rs  mod.rs
omq-proto/src/proto/mechanism/blake3zmq/: cookie.rs  crypto.rs  handshake.rs  mod.rs  transform.rs  wire.rs
omq-proto/src/proto/transform/: common.rs  lz4.rs  mod.rs  zstd.rs
omq-proto/tests/: connection.rs  endpoint.rs
omq-tokio/: CHANGELOG.md  Cargo.toml
omq-tokio/benches/: pair.rs  pub_sub.rs  push_pull.rs  req_rep.rs  router_dealer.rs  run_all.sh
omq-tokio/benches/common/: mod.rs
omq-tokio/src/: lib.rs
omq-tokio/src/engine/: driver.rs  mod.rs
omq-tokio/src/routing/: drop_queue.rs  fair_queue.rs  fan_out.rs  identity.rs  mod.rs  pump.rs  round_robin.rs
omq-tokio/src/socket/: actor.rs  dispatch.rs  handle.rs  mod.rs  monitor.rs  type_state.rs  udp.rs
omq-tokio/src/transport/: backoff.rs  inproc.rs  ipc.rs  mod.rs  tcp.rs  udp.rs
omq-tokio/tests/: blake3zmq.rs  conflate.rs  coverage_matrix.rs  curve.rs  draft_types.rs  fuzz_parsers.rs  fuzz_socket_actions.rs  handshake_timeout.rs  heartbeat.rs  inproc_subside.rs  interop_compio.rs  interop_pyzmq_curve.rs  interop_ruby.rs  ipc.rs  lz4_tcp.rs  monitor.rs  multi_peer.rs  options_polish.rs  priority.rs  pub_sub.rs  push_pull.rs  radio_dish.rs  reconnect.rs  req_rep.rs  router_dealer.rs  udp.rs  unbind_disconnect.rs  xpub_xsub.rs  zstd_tcp.rs
omq/src/: lib.rs
omq/tests/: smoke.rs
scripts/: bench_compare.sh  libzmq_bench_peer.c  test-all.sh
