[package]
name = "pyomq"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "ISC"
authors = ["Patrik Wenger <paddor@gmail.com>"]
repository = "https://github.com/paddor/omq.rs"
description = "Python binding for omq.rs - drop-in pyzmq replacement built on omq-compio (default) or omq-tokio."
publish = false

[lib]
name = "pyomq"
crate-type = ["cdylib"]

[features]
# v0.1 ships the compio backend only; an alternative `tokio-backend` is
# planned but not in scope yet.
default = []
curve = ["omq-compio/curve"]
blake3zmq = ["omq-compio/blake3zmq"]
lz4 = ["omq-compio/lz4"]
zstd = ["omq-compio/zstd"]

[dependencies]
omq-proto = { path = "../../omq-proto", default-features = false }
omq-compio = { path = "../../omq-compio", default-features = false }
# We need direct access to compio's runtime spawn / Runtime to host the
# Socket registry on the compio thread.
compio = { version = "=0.19.0-rc.1", features = ["macros", "runtime", "io-uring"] }

bytes = "1"
libc = "0.2"
flume = { version = "0.11", default-features = false, features = ["async"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# PyO3 stable ABI: one wheel covers Python 3.9+.
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
